--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Solid App</title>
+    <title>Pépinière Issa</title>
     <script type="module" crossorigin src="/assets/index.d52423e2.js"></script>
     <link rel="stylesheet" href="/assets/index.c454f2b8.css">
   </head>
